# NewUkrainianInstagram

./: env  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 6165cee98675_users.py
src/conf/: config.ini
src/database/: models.py
src/routes/: auth.py
src/services/: auth_decorators.py
