[tool.poetry]
name = "newukrainianinstagram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
psycopg2 = "^2.9.6"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
alembic = "^1.11.1"
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
